syntax = "proto3";
package example;

import "google/api/annotations.proto";

message Probe {
    string mac = 1;
    string bssid = 2;
    string timestamp = 3;
    string ssid = 4;
}

message ExampleRequest {
    string ap_id = 1;
    repeated Probe probe_requests = 2;
}

message ExampleResponse {
}

service ExampleService {
    rpc ExampleEndpoint(ExampleRequest) returns (ExampleResponse) {
        option (google.api.http) = {
            post: "/v1/example"
            body: "*"
        };
    }
}
